// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer > Drawer baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--right"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-drawer"
    >
      <!---->
      <!---->
      <div
        class="t-drawer__sidebar"
      >
        
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单一
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单二
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单三
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单四
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单五
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单六
          </div>
        </div>
        
      </div>
      <!---->
    </div>
    
  </div>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      基础抽屉
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Drawer > Drawer footerVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--left"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-drawer"
    >
      <!---->
      <!---->
      <div
        class="t-drawer__sidebar"
      >
        
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单一
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单二
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单三
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单四
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单五
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单六
          </div>
        </div>
        
      </div>
      <div
        class="t-drawer__footer"
      >
        
        <div
          class="button-host"
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle t-button--block"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
              操作
              
            </span>
            <!---->
          </button>
        </div>
        
      </div>
    </div>
    
  </div>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      带底部插槽抽屉
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Drawer > Drawer iconVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--right"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-drawer"
    >
      <!---->
      <!---->
      <div
        class="t-drawer__sidebar"
      >
        
        <div
          class="t-drawer__sidebar-item"
        >
          <span
            class="t-drawer__sidebar-item-icon"
          >
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="app"
              >
                <g
                  id="fill1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    fill="transparent"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    fill="transparent"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    fill="transparent"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  fill="transparent"
                  id="fill2"
                />
                <g
                  id="stroke1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </span>
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单一
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <span
            class="t-drawer__sidebar-item-icon"
          >
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="app"
              >
                <g
                  id="fill1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    fill="transparent"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    fill="transparent"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    fill="transparent"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  fill="transparent"
                  id="fill2"
                />
                <g
                  id="stroke1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </span>
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单二
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <span
            class="t-drawer__sidebar-item-icon"
          >
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="app"
              >
                <g
                  id="fill1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    fill="transparent"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    fill="transparent"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    fill="transparent"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  fill="transparent"
                  id="fill2"
                />
                <g
                  id="stroke1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </span>
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单三
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <span
            class="t-drawer__sidebar-item-icon"
          >
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="app"
              >
                <g
                  id="fill1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    fill="transparent"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    fill="transparent"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    fill="transparent"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  fill="transparent"
                  id="fill2"
                />
                <g
                  id="stroke1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </span>
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单四
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <span
            class="t-drawer__sidebar-item-icon"
          >
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="app"
              >
                <g
                  id="fill1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    fill="transparent"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    fill="transparent"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    fill="transparent"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  fill="transparent"
                  id="fill2"
                />
                <g
                  id="stroke1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </span>
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单五
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <span
            class="t-drawer__sidebar-item-icon"
          >
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="app"
              >
                <g
                  id="fill1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    fill="transparent"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    fill="transparent"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    fill="transparent"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  fill="transparent"
                  id="fill2"
                />
                <g
                  id="stroke1"
                >
                  <path
                    d="M3 3H10V10H3V3Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M14 14H21V21H14V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                  <path
                    d="M3 14H10V21H3V14Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </g>
                <path
                  d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
            </svg>
          </span>
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单六
          </div>
        </div>
        
      </div>
      <!---->
    </div>
    
  </div>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-5cca2c30=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      带图标抽屉
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Drawer > Drawer mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-bf17674a=""
>
  <h1
    class="title"
    data-v-bf17674a=""
  >
    Drawer 抽屉
  </h1>
  <p
    class="summary"
    data-v-bf17674a=""
  >
    用作一组平行关系页面/内容的切换器，相较于Tab，同屏可展示更多的选项数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-bf17674a=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础抽屉
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--right"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-drawer"
        >
          <!---->
          <!---->
          <div
            class="t-drawer__sidebar"
          >
            
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单一
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单二
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单三
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单四
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单五
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单六
              </div>
            </div>
            
          </div>
          <!---->
        </div>
        
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          基础抽屉
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-bf17674a=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标抽屉
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--right"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-drawer"
        >
          <!---->
          <!---->
          <div
            class="t-drawer__sidebar"
          >
            
            <div
              class="t-drawer__sidebar-item"
            >
              <span
                class="t-drawer__sidebar-item-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="app"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        fill="transparent"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        fill="transparent"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单一
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <span
                class="t-drawer__sidebar-item-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="app"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        fill="transparent"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        fill="transparent"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单二
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <span
                class="t-drawer__sidebar-item-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="app"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        fill="transparent"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        fill="transparent"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单三
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <span
                class="t-drawer__sidebar-item-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="app"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        fill="transparent"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        fill="transparent"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单四
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <span
                class="t-drawer__sidebar-item-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="app"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        fill="transparent"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        fill="transparent"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单五
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <span
                class="t-drawer__sidebar-item-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="app"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        fill="transparent"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        fill="transparent"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </span>
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单六
              </div>
            </div>
            
          </div>
          <!---->
        </div>
        
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-5cca2c30=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          带图标抽屉
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-bf17674a=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        带标题抽屉
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--left"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-drawer"
        >
          <div
            class="t-drawer__title"
          >
            标题
          </div>
          <!---->
          <div
            class="t-drawer__sidebar"
          >
            
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单一
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单二
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单三
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单四
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单五
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单六
              </div>
            </div>
            
          </div>
          <!---->
        </div>
        
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          带标题抽屉
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-bf17674a=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带底部插槽样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--left"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-drawer"
        >
          <!---->
          <!---->
          <div
            class="t-drawer__sidebar"
          >
            
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单一
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单二
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单三
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单四
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单五
              </div>
            </div>
            <div
              class="t-drawer__sidebar-item"
            >
              <!---->
              <div
                class="t-drawer__sidebar-item-title"
              >
                菜单六
              </div>
            </div>
            
          </div>
          <div
            class="t-drawer__footer"
          >
            
            <div
              class="button-host"
            >
              <button
                aria-disabled="false"
                class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle t-button--block"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                  操作
                  
                </span>
                <!---->
              </button>
            </div>
            
          </div>
        </div>
        
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          带底部插槽抽屉
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-bf17674a=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 使用方式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        使用命令行
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-bf17674a=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          命令行调用
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Drawer > Drawer pluginVue demo works fine 1`] = `
<button
  aria-disabled="false"
  class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
  role="button"
  type="button"
>
  <!---->
  <span
    class="t-button__content"
  >
    
    命令行调用
    
  </span>
  <!---->
</button>
`;

exports[`Drawer > Drawer titleVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--left"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-drawer"
    >
      <div
        class="t-drawer__title"
      >
        标题
      </div>
      <!---->
      <div
        class="t-drawer__sidebar"
      >
        
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单一
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单二
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单三
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单四
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单五
          </div>
        </div>
        <div
          class="t-drawer__sidebar-item"
        >
          <!---->
          <div
            class="t-drawer__sidebar-item-title"
          >
            菜单六
          </div>
        </div>
        
      </div>
      <!---->
    </div>
    
  </div>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      带标题抽屉
      
    </span>
    <!---->
  </button>
  
</div>
`;
